@@ -3,6 +3,7 @@ YYYY/MM/DD
 
 * Bug Fixes *
 
+ - #5947, [topology] Fix crash in ST_ModEdgeHeal (Sandro Santilli)
  - #5922, [topology] Fix crash in TopoGeo_AddLinestring with EMPTY input (Sandro Santilli)
  - #5907, [topology] Fix crash in TopoGeo_AddPolygon with EMPTY input (Sandro Santilli)
  - #5876, Fix ST_AddPoint with empty point argument (Paul Ramsey)
